...
    <variable
      name="viewModel"
      type="org.oppia.android.app.topic.practice.TopicPracticeViewModel" />
  </data>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/topic_practice_skill_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_screen_quaternary_background_color"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingStart="@dimen/topic_practice_fragment_padding_start"
...
