...

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
      android:id="@+id/topic_practice_start_button"
      style="@style/StateButtonInactive"
      android:layout_width="wrap_content"
      android:minWidth="160dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/topic_practice_footer_view_margin_top"
      android:layout_marginBottom="@dimen/topic_practice_footer_view_margin_bottom"
...
