...
      android:layout_marginEnd="@dimen/topic_practice_header_child_constraint_layout_margin_end"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        android:id="@+id/master_skills_text_view"
        style="@style/Heading2ViewStart"
        android:layout_marginEnd="@dimen/master_skills_text_view_margin_end"
        android:text="@string/topic_fragment_practice_master_skills_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
