...

        <androidx.constraintlayout.widget.Barrier
          android:id="@+id/topic_practice_subtopic_barrier"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:barrierDirection="bottom"
          app:constraint_referenced_ids="subtopic_check_box" />

        <CheckBox
          android:id="@+id/subtopic_check_box"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:buttonTint="@color/component_color_shared_checkbox_selector"
...
